--- a/Template.MobileServer.Web/Shared/MainLayout.razor
+++ b/Template.MobileServer.Web/Shared/MainLayout.razor
@@ -23,7 +23,7 @@
                 </MudAppBar>
                 <MudDrawer @bind-Open="drawerOpen" Elevation="1">
                     <MudDrawerHeader Dense="true">
-                        <MudText Typo="Typo.h6">Typography</MudText>
+                        <MudText Typo="Typo.h6">Template</MudText>
                     </MudDrawerHeader>
                     <NavMenu />
                 </MudDrawer>
