--- a/Template.MobileServer.Backend.Web/Pages/Error.cshtml
+++ b/Template.MobileServer.Backend.Web/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Template.MobileServer.Backend.Pages.ErrorModel
+@model Template.MobileServer.Backend.Web.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
