--- a/Template.MobileServer.Frontend/_Imports.razor
+++ b/Template.MobileServer.Frontend/_Imports.razor
@@ -1,12 +1,10 @@
-@using System.Net.Http
-@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.JSInterop
-@using MudBlazor
-@using Template.MobileServer.Api
+@using Smart.AspNetCore.Components
 @using Template.MobileServer.Frontend
+@using Template.MobileServer.Frontend.Components
 @using Template.MobileServer.Frontend.Shared
+@using static Template.MobileServer.Frontend.Components.ViewHelper
