--- a/Template.MobileServer.Frontend/_Imports.razor
+++ b/Template.MobileServer.Frontend/_Imports.razor
@@ -3,6 +3,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.JSInterop
+@using MudBlazor
 @using Smart.AspNetCore.Components
 @using Template.MobileServer.Frontend
 @using Template.MobileServer.Frontend.Components
