--- a/Template.MobileServer.Frontend/Shared/NavMenu.razor
+++ b/Template.MobileServer.Frontend/Shared/NavMenu.razor
@@ -1,3 +1,4 @@
 <MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="/data" Icon="@Icons.Material.Filled.Dataset">Data</MudNavLink>
 </MudNavMenu>
