--- a/Template.MobileServer.Frontend/_Imports.razor
+++ b/Template.MobileServer.Frontend/_Imports.razor
@@ -9,4 +9,5 @@
 @using Template.MobileServer.Frontend
 @using Template.MobileServer.Frontend.Components
 @using Template.MobileServer.Frontend.Shared
+@using Template.MobileServer.Frontend.Shared.Shell
 @using static Template.MobileServer.Frontend.Components.ViewHelper
