--- a/Template.MobileServer.Web/Components/App.razor
+++ b/Template.MobileServer.Web/Components/App.razor
@@ -1,14 +1,15 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ja">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />  
+    <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href=@Assets["_content/MudBlazor/MudBlazor.min.css"] rel="stylesheet" />
     <ImportMap />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="icon" type="image/ico" href="@Assets["favicon.ico"]" />
+    <link href="@Assets["css/site.css"]" rel="stylesheet" />
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
