--- a/Template.MobileServer.Web/Components/_Imports.razor
+++ b/Template.MobileServer.Web/Components/_Imports.razor
@@ -11,10 +11,11 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazor.Services
+@using Smart.AspNetCore.Components
 @using Template.MobileServer.Web
 @using Template.MobileServer.Web.Infrastructure.Components
+@using Template.MobileServer.Web.Infrastructure.Validation
 @using Template.MobileServer.Web.Components
 @using Template.MobileServer.Web.Components.Dialogs
 @using static Template.MobileServer.Web.Components.ViewHelper
 @using Template.MobileServer.Web.State
-@using Smart.AspNetCore.Components
